# Dawzle

./: .editorconfig  .gitignore  LICENSE  README.md  angular.json  karma.conf.js  package.json  package.json.ng  tsconfig.app.json
src-ng/: index.html  styles.sass
src-ng/app/: app-routing.module.ts  app.component.sass  app.component.spec.ts  app.component.ts  app.module.ts
src-ng/app/components/toolbar/: toolbar.component.html  toolbar.component.sass
src-ng/app/components/toolbar/menus/edit/: edit.component.html  edit.component.ts
src-ng/app/components/toolbar/menus/file/: file.component.html  file.component.ts
src-ng/app/components/toolbar/menus/mode/: mode.component.html  mode.component.ts
src-ng/app/components/toolbar/menus/render/: render.component.html  render.component.ts
src-ng/app/pages/home/: home.component.html
src-tauri/: Cargo.toml  tauri.conf.json
